# sea-orm-restapi-crud1

./: Cargo.toml  initial_books.json  my1.sql  rust-books-seeddata.sql
migrations/: 20220612125547_rust-init.sql
src/: main.rs
src/db/: utils.rs
src/models/: book.rs
