[package]
name = "sqlx-mysql-restapi-crud1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.5.13", features = ["runtime-tokio-native-tls", "json", "mysql"] }
tokio = { version = "1.19.2", features = ["full"] }
uuid = "1.1.2"
